<resources>
    <string name="app_name">StudyShack</string>
    <string name="statistics_label">Statistics</string>
    <string name="houses_label">Houses</string>
    <string name="up_button_description">Go back to previous page</string>
    <string name="time_to_upgrade_textview">Time left till next upgrade:</string>
    <string name="start_button_label">Start</string>
    <string name="upgrade_button_description">Click to upgrade house</string>
    <string name="houseview_description">Image of current house</string>
    <string name="default_time">00:00</string>
    <string name="add_house_label">Add House</string>
    <string name="house_description_label">House Description:</string>
    <string name="house_name_label">House Name:</string>
    <string name="house_name_hint">Fill in your house name</string>
    <string name="add_button_label">Add</string>
    <string name="house_description_hint">Fill in your house description</string>
    <string name="settings_button_description">Click to edit current house</string>
    <string name="house_settings_label">House Settings</string>
    <string name="edit_button_label">Edit</string>
    <string name="delete_button_label">Delete</string>
    <string name="time_spent_this_week_label">Time spent this week:</string>
    <string name="time_to_upgrade_label">Time to upgrade:</string>
    <string name="default_time_label">0h 00m</string>
    <string name="first_info">StudyShack is a productivity app which acts as a soft lock for you, removing all distractions on your phone!
        \n\n<b><u>How does it work:</u></b>
        \n\n<b>1. Create your own Houses:</b>
        \nIn the Houses tab, you can create as many houses as you want and edit them whenever you want! Houses created represent areas or subjects you would like to focus on.
        \n\n<b>2. Study Sessions:</b>
        \nYou can clock your study session in your specific house. Tap and drag on the SeekBar to adjust the how long you would like to study for.
        \nAfter clocking enough time in that house, you can even upgrade them! There is a total for 5 levels to reach! Study hard!</string>
    <string name="second_info">Note:
        \nIf you leave the app while the timer is still running or stop the timer halfway, all recorded progress for that session so far will not be recorded!
        \n\n<b>3. Track your study sessions:</b>
        \nIn the Statistics tab, you can also filter the graph by both Houses and Time period too!
        \n\nMade by: Lyndon Lim and  Poon Jeun Hoe (Orbital Project)
        \n\n
    </string>
</resources>
