<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHouse"
    android:background="@drawable/dark_background">

    <ImageView
        android:id="@+id/house_settings_up_button"
        android:layout_width="54dp"
        android:layout_height="57dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/up_button_description"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/house_settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/house_settings_label"
        android:textColor="@color/whiteText"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/house_settings_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/house_name_label"
        android:textColor="@color/whiteText"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/house_settings_up_button" />

    <EditText
        android:id="@+id/house_settings_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/house_name_hint"
        android:textColor="@color/whiteText"
        android:textColorHint="@color/whiteTextHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_settings_name_label"
        android:autofillHints="" />


    <TextView
        android:id="@+id/house_settings_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/house_description_label"
        android:textColor="@color/whiteText"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/house_settings_name_edit_text"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/house_settings_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/house_description_hint"
        android:inputType="textMultiLine"
        android:textColor="@color/whiteText"
        android:textColorHint="@color/whiteTextHint"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/house_settings_description_label" />

    <Button
        android:id="@+id/house_settings_edit_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/yellow_button"
        android:fontFamily="@font/quicksand_bold"
        android:onClick="createHouse"
        android:text="@string/edit_button_label"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/house_settings_description_edit_text" />

    <Button
        android:id="@+id/house_settings_delete_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/red_button"
        android:fontFamily="@font/quicksand_bold"
        android:onClick="createHouse"
        android:text="@string/delete_button_label"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/house_settings_edit_button" />



</android.support.constraint.ConstraintLayout>