<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@color/card_background">

        <TextView
            android:id="@+id/house_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="15dp"
            android:background="@color/cardview_label"
            android:fontFamily="@font/quicksand_bold"
            android:text="CS1010"
            android:textColor="@color/whiteText"
            android:textSize="30dp"
            />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description:"
            android:textSize="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:layout_below="@id/house_label"
            android:paddingLeft="15dp"
            android:paddingTop="4dp"/>

        <TextView
            android:id="@+id/description_text"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_label"
            android:text="dummy text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingLeft="15dp"
            />

        <TextView
            android:id="@+id/time_spent_this_week_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_text"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textSize="15dp"
            android:text="@string/time_spent_this_week_label" />

        <TextView
            android:id="@+id/time_spent_this_week_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/time_spent_this_week_label"
            android:layout_alignTop="@+id/time_spent_this_week_label"
            android:paddingTop="10dp"
            android:paddingLeft="4dp"
            android:text="@string/default_time_label"/>

        <TextView
            android:id="@+id/time_to_upgrade_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_spent_this_week_label"
            android:paddingLeft="15dp"
            android:textSize="15dp"
            android:text="@string/time_to_upgrade_label" />

        <TextView
            android:id="@+id/time_to_upgrade_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/time_to_upgrade_label"
            android:layout_alignTop="@id/time_to_upgrade_label"
            android:paddingLeft="4dp"
            android:text="@string/default_time_label"/>

        <ImageView
            android:id="@+id/house_imageview"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="8dp"
            android:padding="2dp"
            android:src="@drawable/house2"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
